Ability to start a new game with custom prompt completed.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   <main>
     <div id="board"></div>
   </main>
+  <form id="custom-form">
+    <p id="form-prompt"></p>
+    <div id="new-game-btns">
+      <button id="btn-new-game-yes">Yes</button>
+      <button id="btn-new-game-no">No</button>
+    </div>
+  </form>
   <script src="scripts/sudoku.js"></script>
 </body>
 </html>
