Added 9 boards and fixed a bug where creating a new game caused problems with the next round in terms of inserting numbers.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <button id="btn-new-game-no">No</button>
     </div>
   </form>
+  <script src="scripts/boards.js"></script>
   <script src="scripts/sudoku.js"></script>
 </body>
 </html>
